[package]
name = "aegis-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core web framework
axum = "0.7"

# The core vercel runtime for Rust
vercel_runtime = "1.1"

# Tokio for async runtime
tokio = { version = "1", features = ["macros"] }

# For handling JSON
serde_json = "1.0"

# Tower is a library of components for building robust network services.
# It's a dependency of Axum and is needed for the `oneshot` call.
tower = { version = "0.4", features = ["util"] }

# This is a general-purpose library for working with HTTP types.
http = "1.1"


[[bin]]
name = "index"
path = "api/index.rs"